#12460 Implementa sugestoes review